add_subdirectory(first_order_general)
add_subdirectory(laplace_bc_dirichlet)
add_subdirectory(laplace_bc_neumann)
add_subdirectory(laplace_bc_newton)
add_subdirectory(laplace_bc_newton2)
add_subdirectory(system_exp)
add_subdirectory(system_sin)
add_subdirectory(system_sin_eigen)
add_subdirectory(system_sin_adapt)
add_subdirectory(system_pendulum)
add_subdirectory(system_chaotic)
add_subdirectory(system_car_model)
add_subdirectory(laplace_bc_dirichlet_adapt)
add_subdirectory(first_order_general_adapt)
add_subdirectory(laplace_bc_dirichlet_adapt_new)
add_subdirectory(first_order_general_adapt_new)
add_subdirectory(laplace_bc_dirichlet_adapt_goal)
add_subdirectory(neutronics)
add_subdirectory(system_neutronics_eigenvalue)
add_subdirectory(system_neutronics_fixedsrc)
add_subdirectory(system_neutronics_fixedsrc2)

if(WITH_PYTHON)
    add_subdirectory(schroedinger)
endif(WITH_PYTHON)
