add_subdirectory(legendre-1)
add_subdirectory(legendre-2)
add_subdirectory(legendre-3)
add_subdirectory(lobatto-1)
add_subdirectory(lobatto-2)
add_subdirectory(adapt-exact-quadr-L2)
add_subdirectory(adapt-exact-sin-L2)
add_subdirectory(adapt-exact-system-sin-L2)
add_subdirectory(adapt-exact-quadr-H1)
add_subdirectory(adapt-exact-sin-H1)
add_subdirectory(adapt-exact-system-sin-H1)

