# Benchmarks.
add_subdirectory(smooth-iso)
add_subdirectory(smooth-aniso-x)
add_subdirectory(smooth-aniso-y)
add_subdirectory(lshape)
add_subdirectory(layer-interior)
add_subdirectory(layer-boundary)
add_subdirectory(neutronics-heat-conduction)
add_subdirectory(neutronics-heat-conduction-adapt)
add_subdirectory(neutronics-2-group-adapt)
add_subdirectory(stabilized-advection-diffusion)
add_subdirectory(stabilized-advection-reaction)  
add_subdirectory(sdirk-22)
add_subdirectory(nonsym-check)

#if(NOT WITH_TRILINOS)
  add_subdirectory(screen)
#endif(NOT WITH_TRILINOS)
