# Benchmarks from Bill Mitchell's NIST report.
add_subdirectory(nist-01)
add_subdirectory(nist-02)
add_subdirectory(nist-03)
add_subdirectory(nist-04)
add_subdirectory(nist-05)
add_subdirectory(nist-06)
add_subdirectory(nist-07)
add_subdirectory(nist-08)
add_subdirectory(nist-09)   
add_subdirectory(nist-09-kelly)
add_subdirectory(nist-10)
add_subdirectory(nist-11)
add_subdirectory(nist-12)
