# Benchmarks from Bill Mitchell's NIST report.
add_subdirectory(01-analytic-solution)
add_subdirectory(02-reentrant-corner)
#add_subdirectory(03-linear-elasticity) # DOES NOT WORK CORRECTLY
add_subdirectory(04-exponential-peak)
add_subdirectory(05-battery)
add_subdirectory(06-boundary-layer)
add_subdirectory(07-boundary-line-singularity)
add_subdirectory(08-oscillatory)
add_subdirectory(09-wave-front)   
#add_subdirectory(09-wave-front-kelly) # DOES NOT WORK CORRECTLY
add_subdirectory(10-interior-line-singularity)
add_subdirectory(11-kellogg)
add_subdirectory(12-multiple-difficulties)
