find_package(JUDY REQUIRED)
include_directories(${JUDY_INCLUDE_DIR})

# examples
add_subdirectory(smooth-iso)
add_subdirectory(smooth-aniso-x)
add_subdirectory(smooth-aniso-y)
add_subdirectory(lshape)
add_subdirectory(layer-interior)
add_subdirectory(layer-boundary)
add_subdirectory(line-singularity)
add_subdirectory(kellogg)
add_subdirectory(screen)
add_subdirectory(neutronics-heat-conduction)
add_subdirectory(neutronics-heat-conduction-adapt)
add_subdirectory(neutronics-2-group-adapt)
add_subdirectory(nist-1)
add_subdirectory(nist-4)
add_subdirectory(nist-7)
add_subdirectory(nist-9)   
