find_package(JUDY REQUIRED)
include_directories(${JUDY_INCLUDE_DIR})

# examples
add_subdirectory(smooth-iso)
add_subdirectory(smooth-aniso-x)
add_subdirectory(smooth-aniso-y)
add_subdirectory(lshape)
add_subdirectory(layer-interior)
add_subdirectory(layer-boundary)
add_subdirectory(neutronics-heat-conduction)
add_subdirectory(neutronics-heat-conduction-adapt)
add_subdirectory(neutronics-2-group-adapt)
add_subdirectory(nist-1)
add_subdirectory(nist-2)
add_subdirectory(nist-4)
add_subdirectory(nist-6)
add_subdirectory(nist-7)
add_subdirectory(nist-8)
add_subdirectory(nist-9)   
add_subdirectory(nist-10)
add_subdirectory(nist-11)

#if(NOT WITH_TRILINOS)
  add_subdirectory(screen)
#endif(NOT WITH_TRILINOS)
