# Benchmarks.
add_subdirectory(smooth-iso)
add_subdirectory(smooth-aniso-x)
add_subdirectory(smooth-aniso-y)
add_subdirectory(lshape)
add_subdirectory(layer-interior)
add_subdirectory(layer-boundary)
add_subdirectory(neutronics-heat-conduction)
add_subdirectory(neutronics-heat-conduction-adapt)
add_subdirectory(neutronics-2-group-adapt)
add_subdirectory(stabilized-advection-diffusion)
add_subdirectory(stabilized-advection-reaction)  
add_subdirectory(sdirk-22)
add_subdirectory(nonsym-check)

# Benchmarks from Bill Mitchell's NIST report.
add_subdirectory(nist-01)
add_subdirectory(nist-02)
add_subdirectory(nist-03)
add_subdirectory(nist-04)
add_subdirectory(nist-05)
add_subdirectory(nist-06)
add_subdirectory(nist-07)
add_subdirectory(nist-08)
add_subdirectory(nist-09)   
add_subdirectory(nist-09-kelly)
add_subdirectory(nist-10)
add_subdirectory(nist-11)
add_subdirectory(nist-12)

#if(NOT WITH_TRILINOS)
  add_subdirectory(screen)
#endif(NOT WITH_TRILINOS)
