add_subdirectory(acoustics)
add_subdirectory(advection-diffusion-reaction)
add_subdirectory(euler)
add_subdirectory(heat-transfer)
add_subdirectory(helmholtz)
add_subdirectory(linear-elasticity)
add_subdirectory(maxwell)
add_subdirectory(miscellaneous)
add_subdirectory(navier-stokes)
add_subdirectory(nernst-planck)
add_subdirectory(neutronics)
add_subdirectory(poisson)
add_subdirectory(richards)
add_subdirectory(schroedinger)
#add_subdirectory(thermoelasticity) TODO: Convert to new forms.
add_subdirectory(wave-equation)

